<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="18dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/edit_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="textEmailAddress"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        android:inputType="textPassword"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:background="@color/colorButton"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/button_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="231dp"
        android:background="@color/colorButton"
        android:text="@string/signup"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>