<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_student"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="50dp"
        android:background="@color/colorButton"
        android:paddingBottom="30dp"
        android:text="@string/student"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/button_faculty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_faculty"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:background="@color/colorButton"
        android:text="@string/faculty"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/button_clubhead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_student"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_clubhead"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="200dp"
        android:background="@color/colorButton"
        android:text="@string/clubhead"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_faculty"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>